--- a/src/components/displayweather.css
+++ b/src/components/displayweather.css
@@ -1,85 +1,26 @@
-.displayweather {
-  margin-top: 20px;
-  display: flex;
-  flex-flow: column nowrap;
+.weather-card {
+  color: white;
+  text-align: center;
+  padding: 20px;
+  margin: 20px auto;
+  border-radius: 15px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  width: 90%;
+  max-width: 400px;
+  transition: background 0.5s ease-in-out;
 }
 
-.displayweather .maincard {
-  width: 500px;
-  margin-top: 20px;
-  align-self: center;
-  padding: 50px;
-  border-radius: 20px;
-  position: relative;
-  background: rgb(245, 242, 242);
-  border: 1px solid black;
+.weather-card h1 {
+  font-size: 3rem;
+  margin: 10px 0;
 }
 
-.displayweather .maincard .cardtitle {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  font-size: 1.5rem;
+.weather-card h2 {
+  font-size: 2rem;
+  margin-bottom: 10px;
 }
 
-.displayweather .maincard .cardsubtitle {
-  position: absolute;
-  left: 10px;
-
-  color: grey;
-  margin-top: -8px;
-}
-.displayweather h1 {
-  font-size: 5rem;
-  margin: -10px;
-  margin-left: -150px;
-}
-
-.displayweather .weather-icon {
-  width: 100px;
-
-  position: absolute;
-  top: 50px;
-}
-
-.displayweather .weather-main {
-  position: absolute;
-
-  top: 120px;
-  left: 310px;
-  font-weight: 500;
+.weather-card p {
   font-size: 1.2rem;
-}
-
-.displayweather .weather-description {
-  position: absolute;
-  left: 10px;
-  font-size: 1.4rem;
-}
-.displayweather .weatherdetails {
-  margin-left: 50px;
-  margin-right: 50px;
-
-  display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: auto;
-  grid-gap: 20px;
-}
-.displayweather .weatherdetails .section1 {
-  justify-self: right;
-  width: 300px;
-}
-
-h4 {
-  text-align: left;
-  margin-right: 30px;
-  font-size: 1.2rem;
-}
-
-td {
-  border-bottom: 2px dashed grey;
-}
-
-.displayweather .weatherdetails span {
-  font-size: 1.2rem;
+  margin: 5px 0;
 }
